implement snapshotting of market, limit and user repos